v0.0.7 
- MARC::XMLWriter added (thanks ksclarke)

v0.0.6  Tue Oct 18 09:33:12 CDT 2005
- MARC::MARC21::decode throws an exception when a directory can't be found.
  Exception is caught and ignored in MARC::ForgivingReader

v0.0.5  Tue Oct 18 01:50:40 CDT 2005
- when unspecified field indicators are forced to blanks
- checking for when a field appears to not have indicators and subfields in
  which case the field is skipped entirely

v0.0.4  Tue Oct 18 00:39:50 CDT 2005
- fixed off by one error when reading in leader, previous versions were
  reading an extra character

v0.0.3  Mon Oct 17 22:51:23 CDT 2005
- added ForgivingReader class and support for reading records without using
  possibly faulty offsets when the user needs them.

v0.0.2  Mon Oct 17 17:42:57 CDT 2005
- updated version string to see if it'll fix some gem oddness

v0.0.1  Mon Oct 10 10:29:20 CDT 2005
- initial release
