@@ -1,3 +1,4 @@
+require 'marc/constants'
 require 'marc/record'
 require 'marc/field'
 require 'marc/control'
@@ -5,6 +6,4 @@ require 'marc/subfield'
 require 'marc/reader'
 require 'marc/writer'
 require 'marc/exception'
-require 'marc/marc21'
-require 'marc/marcxml'
 require 'marc/xmlwriter'
