@@ -1,5 +1,10 @@
 v0.0.7 
 - MARC::XMLWriter added (thanks ksclarke)
+- removed encode/decode methods in MARC::MARC21 into MARC::Writer and 
+  MARC::Reader respectively. This required pushing MARC21 specific constants 
+  out into MARC::Constants which is required as necessary.
+- moved encode from MARC::MARXML into MARC::XMLWriter and added constants
+  to MARC::Constants
 
 v0.0.6  Tue Oct 18 09:33:12 CDT 2005
 - MARC::MARC21::decode throws an exception when a directory can't be found.
